fix negative margin of header tab bar causing horizontal scroll bar

--- a/frontend/src/app/app.css
+++ b/frontend/src/app/app.css
@@ -1,6 +1,6 @@
 .app-container {
   max-width: 700px;
-  min-width: 460px;
+  min-width: 420px;
   margin: 0 auto;
   padding: 0 10px;
 }
