--- a/frontend/src/app/css/tabBar.css
+++ b/frontend/src/app/css/tabBar.css
@@ -7,5 +7,5 @@
 
 .tabBar-banner {
   background-color: antiquewhite;
-  min-width: 460px;
+  min-width: 420px;
 }
