--- a/frontend/src/app/header/appHeader.css
+++ b/frontend/src/app/header/appHeader.css
@@ -1,5 +1,5 @@
 .app-header-banner {
-  min-width: 460px;
+  min-width: 420px;
   background-color: rgb(36, 54, 65);
 }
 
