--- a/frontend/src/component/outPost/outPostTabBar.css
+++ b/frontend/src/component/outPost/outPostTabBar.css
@@ -1,3 +1,3 @@
 .new-post-btn {
-  margin-bottom: 8px;
+  margin-bottom: 9px;
 }
